# mav_simulator

./: .gitignore
autopilot/: CMakeLists.txt  package.xml
autopilot/include/autopilot/: autopilot.h  pid_controller.h
autopilot/msg/: Autopilot.msg
autopilot/param/: control_params.yaml
autopilot/src/: autopilot.cpp  autopilot_node.cpp  pid_controller.cpp
dynamics/: CMakeLists.txt  package.xml
dynamics/include/dynamics/: mav_dynamics.h  wind_sim.h
dynamics/msg/: ControlInputs.msg  State.msg  Wind.msg
dynamics/param/: plane_params.yaml
dynamics/src/: mav_dynamics.cpp  mav_dynamics_node.cpp  wind_node.cpp  wind_sim.cpp
estimator/: CMakeLists.txt  package.xml
estimator/include/estimator/: ekf.h
estimator/src/: ekf.cpp  ekf_node.cpp
mav_msgs/: CMakeLists.txt  package.xml
mav_msgs/msg/: ControlInputs.msg
mav_viewer/: CMakeLists.txt  package.xml  setup.py
mav_viewer/launch/: simulator.launch  viewer.launch
mav_viewer/meshes/: plane.urdf
mav_viewer/scripts/: data_viewer.py  data_viewer_node.py  mav_viewer.py  mav_viewer_node.py
sensors/: CMakeLists.txt  package.xml
sensors/include/sensors/: imu.h
sensors/param/: sensor_params.yaml
sensors/params/: sensor_params.yaml
sensors/src/: imu.cpp  imu_node.cpp
tools/: CMakeLists.txt  package.xml
tools/include/tools/: rotations.h
tools/src/: rotations.cpp
viewer/: CMakeLists.txt  package.xml  setup.py
viewer/launch/: plotting.launch  sim.launch  sim2.launch
viewer/nodes/: plotter.py
viewer/src/uav_plotter/: Plotter.py  plotter_args.py  state_plot.py  state_plotbox.py
